--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,10 @@ body{
     border-bottom: 1px solid #ECECEC;
 }
 
+.main-header{
+    display: flex;
+    align-items: center;
+}
 .logo{
     color: var(--black);
     font-family: 'Raleway',sans-serif;
@@ -83,6 +87,7 @@ body{
 }
 .site-nav{
     display: flex;
+    margin-left: 93px;
 }
 
 /* .site-nav li{
@@ -93,6 +98,9 @@ body{
     margin-right: 50px;
 }
 .site-nav .link{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
     color: var(--title);
     font-weight: 500;
     font-size: 14px;
@@ -108,6 +116,14 @@ body{
 
 .site-nav .link.current{
     color: var(--accent-color);
+}
+.contacts{
+    display: flex;
+    margin-left: auto;
+}
+
+.contacts .item:not(:last-child){
+    margin-right: 50px;
 }
 
 .contacts .meltel{
@@ -163,10 +179,7 @@ body{
     font-weight: 700;
     font-size: 16px;
     line-height: 1.9;
-    display: flex;
-    justify-content: center;
     margin: 0 auto;
-    align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
 }
@@ -190,11 +203,11 @@ body{
     line-height: 26px;
     text-align: center;
     letter-spacing: 0.03em;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
 }
 
+.but-sec:not(:last-child){
+    margin-right: 8px;
+}
 .buttons:hover,
 .buttons:focus{
     border: var(--accent-color);
@@ -206,6 +219,8 @@ body{
 
 .butlist{
     margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
 }
 .section{
     padding-top: 94px;
@@ -332,11 +347,24 @@ body{
     width: 370px;
 }
 
+.product{
+    display: flex;
+    flex-wrap: wrap;
+}
 
+.product-element{
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
 
+.product-element:nth-child(3n){
+    margin-right: 0;
+}
 
-
-
+.product-element:nth-last-child(-n + 3){
+    margin-bottom: 0;
+}
 
 
 
