--- a/css/styles.css
+++ b/css/styles.css
@@ -341,13 +341,9 @@ body{
 }
 
 .description-w{
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 24px;
     background: var(--white);
     border: 1px solid #EEEEEE;
-    width: 370px;
 }
 
 .product{
@@ -412,7 +408,6 @@ body{
     color: var(--accent-color);
 }
 
-.forreatr{
-    display: inline-block;
+.forreatr:not(:last-child){
     margin-bottom: 9px;
 }
